--- a/package.json
+++ b/package.json
@@ -14,30 +14,37 @@
     "commit": "git add . && git-cz"
   },
   "dependencies": {
-    "vue": "^3.2.45"
+    "@element-plus/icons-vue": "^2.0.10",
+    "element-plus": "^2.2.31",
+    "vue": "^3.2.45",
+    "vue-router": "^4.1.6"
   },
   "devDependencies": {
-    "@vitejs/plugin-vue": "^4.0.0",
-    "typescript": "^4.9.3",
-    "vite": "^4.1.0",
-    "vue-tsc": "^1.0.24",
-    "web-norm": "^1.0.27",
-    "eslint": "^7.25.0",
-    "prettier": "^2.7.1",
-    "eslint-friendly-formatter": "^4.0.1",
-    "eslint-plugin-prettier": "^4.0.0",
-    "eslint-plugin-html": "^6.2.0",
-    "eslint-config-prettier": "^8.5.0",
-    "eslint-plugin-vue": "^9.2.0",
-    "@typescript-eslint/parser": "^5.30.7",
-    "husky": "^8.0.1",
-    "lint-staged": "^12.4.1",
     "@commitlint/cli": "^17.0.3",
     "@commitlint/config-angular": "^17.0.3",
+    "@commitlint/cz-commitlint": "^17.0.3",
+    "@typescript-eslint/parser": "^5.30.7",
+    "@vitejs/plugin-vue": "^4.0.0",
     "commitizen": "^4.2.4",
     "cz-customizable": "^6.9.0",
-    "@commitlint/cz-commitlint": "^17.0.3",
-    "inquirer": "^8.0.0"
+    "eslint": "^7.25.0",
+    "eslint-config-prettier": "^8.5.0",
+    "eslint-friendly-formatter": "^4.0.1",
+    "eslint-plugin-html": "^6.2.0",
+    "eslint-plugin-prettier": "^4.0.0",
+    "eslint-plugin-vue": "^9.2.0",
+    "husky": "^8.0.1",
+    "inquirer": "^8.0.0",
+    "lint-staged": "^12.4.1",
+    "prettier": "^2.7.1",
+    "typescript": "^4.9.3",
+    "unplugin-auto-import": "^0.14.3",
+    "unplugin-vue-components": "^0.24.0",
+    "vite": "^4.1.0",
+    "vite-plugin-windicss": "^1.8.10",
+    "vue-tsc": "^1.0.24",
+    "web-norm": "^1.0.27",
+    "windicss": "^3.5.6"
   },
   "lint-staged": {
     "*.{js,ts,vue,jsx,tsx}": [
